--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>module 2 solution</title>
-	<link rel="stylesheet" type="text/css" href="C:\Users\Mohammad\Coursera-assignment\module2-solution\css-file/module2-css.css">
+	<link rel="stylesheet" type="text/css" href="css-file/module2-css.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width" initial-scale=1>
 </head>
