--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -6,14 +6,15 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width" initial-scale=1>
 </head>
-	<div id="menu">
+<body>
+	<p id="menu">
 		our Menu
-	</div>
-	<div id="Chicken">
-		<div class="Chicken">
+	</p>
+	<div id="Chicken" >
+		<p class="Chicken">
 			Chicken
-		</div>
-		<div id="Chicken-text">
+		</p>
+		<p id="Chicken-text">
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -21,13 +22,13 @@
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-		</div>
+		</p>
 	</div>
 		<div id="beef">
-		<div class="beef">
+		<p class="beef">
 			Beef
-		</div>
-		<div id="beef-text">
+		</p>
+		<p id="beef-text">
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -35,13 +36,13 @@
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 			
-		</div>
+		</p>
 	</div>
 		<div id="sushi">
-		<div class="sushi">
+		<p class="sushi">
 			sushi
-		</div>
-		<div id="sushi-text">
+		</p>
+		<p id="sushi-text">
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -49,7 +50,7 @@
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 			
-		</div>
+		</p>
 	</div>
 <body>
 
